# Conscious-Bridge-Law

./:  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-CC-BY.txt  LICENSE-MIT.txt  README.md  conscious_transformer.py  demo.py  gitignore  language_centers.py  phi_calculator.py  pyproject.toml  requirements.txt  setup.py  utils.py
bos/: identity_layer.py  role_manager.py
core/: attention_metrics.py  bridge_dynamics.py  bridge_map.py  language_centers.py  phi_calculator.py
demos/: arabic_context.py  mixed_language.py  philosophical_queries.py  web_demo.py
docs/: Conscious_Bridge_Law_v1  research_paper.md
engine/: conscious_law.py  conscious_transformer.py  stability_monitor.py  temperature_adapter.py
tests/: test_phi.py
utils/: metrics.py  token_analysis.py
