[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conscious-bridge-law"
version = "1.0.0"
description = "Transitional Geometry between Aristotelian and Platonic Logic in AI"
authors = [
    { name="Samir Baladi", email="riteofrenaissance@proton.me" }
]
readme = "README.md"
license = { file="LICENSE-MIT.txt" }
keywords = ["AI", "consciousness", "transformers", "phi", "bridge-law"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0"
]

[tool.setuptools.packages.find]
where = ["."]