[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conscious-bridge-law"
version = "1.0.0"
authors = [
    {name = "Samir Baladi", email = "riteofrenaissance@proton.me"}
]
description = "Transitional Geometry between Aristotelian and Platonic Logic in AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
keywords = [
    "ai", "consciousness", "philosophy", "nlp", 
    "machine-learning", "artificial-intelligence",
    "bridge-theory", "cognitive-science"
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
full = [
    "torch>=1.9.0",
    "transformers>=4.12.0",
    "matplotlib>=3.5.0",
    "streamlit>=1.22.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "plotly>=5.13.0",
    "gradio>=3.34.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "sphinx-copybutton>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/riteofrenaissance/Conscious-Bridge-Law"
Documentation = "https://github.com/riteofrenaissance/Conscious-Bridge-Law#readme"
Repository = "https://github.com/riteofrenaissance/Conscious-Bridge-Law.git"
"Bug Tracker" = "https://github.com/riteofrenaissance/Conscious-Bridge-Law/issues"
"GitLab Mirror" = "https://gitlab.com/cyber-constitution/conscious-bridge/conscious-bridge-law"
"Publication" = "https://doi.org/10.5281/zenodo.17814683"

[project.scripts]
conscious-bridge = "engine.conscious_law:main"
bridge-demo = "demos.web_demo:main"
bridge-analyzer = "utils.visualizer:main"

[project.entry-points."conscious_bridge.plugins"]
map_plugin = "core.bridge_map:BridgeMap"
dynamics_plugin = "core.bridge_dynamics:BridgeDynamics"
phi_plugin = "core.phi_calculator:PhiCalculator"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*", 
    "engine*", 
    "bos*", 
    "utils*",
    "demos*",
]
exclude = [
    "tests*", 
    "docs*",
    "examples*",
    "*.tests",
    "*.tests.*",
    "tests.*",
]

[tool.setuptools.package-data]
"conscious_bridge_law" = [
    "docs/*.png",
    "docs/*.md",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[project.readme]
content-type = "text/markdown"
file = "README.md"